feat: terms and items set/del mandatory apis with tests
Closes #87
